faq,portfolio,service-detail,services,about

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                         <ul class="navbar-nav gap-2 ms-auto me-5 pe-3 mb-lg-0 fw-bold d-none d-xl-flex">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./about.html">About Us</a>
@@ -512,11 +512,13 @@
                                 <i class="icon-car-toy fs-1  text-green"></i>
                             </div>
                             <div class="ps-xl-5">
-                                <h4 class="card-title  fw-bold fs-4">Online Class</h4>
+                                <a href="./service-details.html">
+                                    <h4 class="card-title  fw-bold fs-4">Online Class</h4>
+                                </a>
                                 <p class="card-text ">Lorem ipsum dolor sit amet consectetur adipiscing elit platea the
                                     ,osr of a proin mollis pretium facilisi in, ligula volutpat
                                 </p>
-                                <a href="#">Read More</a>
+                                <a href="./service-details.html">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -530,28 +532,13 @@
                                 <i class="icon-toys  fs-1  text-green"></i>
                             </div>
                             <div class="ps-xl-5">
-                                <h4 class="card-title  fw-bold fs-4">Formal Tuition</h4>
+                                <a href="./service-details.html">
+                                    <h4 class="card-title  fw-bold fs-4">Formal Tuition</h4>
+                                </a>
                                 <p class="card-text ">Lorem ipsum dolor sit amet consectetur adipiscing elit platea the
                                     ,osr of a proin mollis pretium facilisi in, ligula volutpat
                                 </p>
-                                <a href="#">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 mb-4">
-                    <div class="card p-xl-4">
-                        <div class="card-body d-xl-flex  flex-row align-items-center gap-3 position-relative">
-                            <div class="card-icon border rounded flex-shrink-0 d-flex justify-content-center align-items-center position-absolute absolute-y-center my-2 my-xl-0"
-                                style="width: 5rem; height: 5rem; left: -4rem; ">
-                                <i class="icon-toys  fs-1  text-green"></i>
-                            </div>
-                            <div class="ps-xl-5">
-                                <h4 class="card-title  fw-bold fs-4">Preschool</h4>
-                                <p class="card-text ">Lorem ipsum dolor sit amet consectetur adipiscing elit platea the
-                                    ,osr of a proin mollis pretium facilisi in, ligula volutpat
-                                </p>
-                                <a href="#">Read More</a>
+                                <a href="./service-details.html">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -564,11 +551,32 @@
                                 <i class="icon-feeder   fs-1  text-green"></i>
                             </div>
                             <div class="ps-xl-5">
-                                <h4 class="card-title  fw-bold fs-4">Special Tuition</h4>
+                                <a href="./service-details.html">
+                                    <h4 class="card-title  fw-bold fs-4">Preschool</h4>
+                                </a>
                                 <p class="card-text ">Lorem ipsum dolor sit amet consectetur adipiscing elit platea the
                                     ,osr of a proin mollis pretium facilisi in, ligula volutpat
                                 </p>
-                                <a href="#">Read More</a>
+                                <a href="./service-details.html">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <div class="card p-xl-4">
+                        <div class="card-body d-xl-flex  flex-row align-items-center gap-3 position-relative">
+                            <div class="card-icon border rounded flex-shrink-0 d-flex justify-content-center align-items-center position-absolute absolute-y-center my-2 my-xl-0"
+                                style="width: 5rem; height: 5rem; left: -4rem; ">
+                                <i class="icon-book   fs-1  text-green"></i>
+                            </div>
+                            <div class="ps-xl-5">
+                                <a href="./service-details.html">
+                                    <h4 class="card-title  fw-bold fs-4">Special Tuition</h4>
+                                </a>
+                                <p class="card-text ">Lorem ipsum dolor sit amet consectetur adipiscing elit platea the
+                                    ,osr of a proin mollis pretium facilisi in, ligula volutpat
+                                </p>
+                                <a href="./service-details.html">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -1610,24 +1618,49 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-xl-4">
-                    <a href="" class="flex items-center gap-1">
+                    <a href="" class="flex items-center gap-1 logo">
                         <img src="./img/logo.png" alt="img">
                         <span class="fw-bold fs-2 ">Ascent</span>
                     </a>
                     <p class="mt-3">Yes, there are many notable ma corporate the a od businesses Informati worldwide
 
                     </p>
+                    <ul class="d-flex align-items-center gap-3 mt-4 list-unstyled">
+                        <li><a href="" style="width: 40px;height: 40px;"
+                                class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-warm "><i
+                                    class="fa-brands fa-facebook-f "></i></a></li>
+                        <li><a href="" style="width: 40px;height: 40px;"
+                                class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-warm "><i
+                                    class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="" style="width: 40px;height: 40px;"
+                                class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-warm "><i
+                                    class="fa-brands fa-linkedin"></i></a></li>
+                        <li><a href="" style="width: 40px;height: 40px;"
+                                class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-warm "><i
+                                    class="fa-brands fa-pinterest-p"></i></a></li>
+                    </ul>
                 </div>
                 <div class="d-none d-xl-block col-xl-1"></div>
 
                 <div class="col-sm-6 col-xl-3">
                     <h3 class="fw-semibold">Pages</h3>
-                    <ul class="d-flex flex-column gap-3 pt-3 list-unstyled list-pages">
-                        <li><a href="" class="">About Us</a></li>
-                        <li><a href="" class="">Latest Service</a></li>
-                        <li><a href="" class="">Latest Blog And News</a></li>
-                        <li><a href="" class="">FAQ</a></li>
-                        <li><a href="" class="">Our Creative Team Member</a></li>
+                    <ul class="d-flex flex-column gap-3 pt-3 list-unstyled anim-left">
+                        <li>
+                            <p class="mb-0"><a href="" class=""> About Us</a></p>
+                        </li>
+                        <li>
+                            <p class="mb-0"><a href="" class=""> Latest Service</a></p>
+                        </li>
+                        <li>
+                            <p class="mb-0"><a href="" class=""> Latest Blog And News</a></p>
+                        </li>
+                        <li>
+                            <p class="mb-0"><a href="" class=""> FAQ</a></p>
+                        </li>
+                        <li>
+                            <p class="mb-0"><a href="" class=""> Our Creative Team Membe</a></p>
+                        </li>
+
                     </ul>
                 </div>
                 <div class="d-none d-xl-block col-xl-1"></div>
