--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ascentt </title>
+    <title>Ascent - About </title>
     <!-- css bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -26,8 +26,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <!-- custom css -->
     <link rel="stylesheet" href="./css/style.css">
-    <!-- about.css -->
-    <link rel="stylesheet" href="./css/about.css">
 </head>
 
 <body>
@@ -57,7 +55,7 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                         <ul class="navbar-nav gap-2 ms-auto me-5 pe-3 mb-lg-0 fw-bold d-none d-xl-flex">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./about.html">About Us</a>
@@ -313,7 +311,7 @@
     </header>
     <section class="banner py-5 bg-warm position-relative z-0 breadcrumb">
         <div class="container">
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col-xl-4">
                     <h1 class="display-2 fw-bold">About Us</h1>
                     <ul class="list-unstyled d-flex gap-4">
@@ -446,7 +444,8 @@
                 </div>
                 <div class="col-md-6 col-xl-4">
                     <div class="card border-0 shadow">
-                        <div class="card-header border-0 bg-primary fs-3 text-center py-3 fw-bold ">Golden Plan</div>
+                        <div class="card-header border-0 bg-primary text-white fs-3 text-center py-3 fw-bold ">Golden
+                            Plan</div>
                         <div class="card-body border-0">
                             <h4 class="card-title fw-bold font-jost">
                                 <span class="display-2 text-green fw-bold">$39</span>/mo
@@ -632,7 +631,7 @@
     <section class="footer pt-5 footer-2 position-relative z-0">
         <div class="container">
             <div class="row">
-                <div class="col-sm-6 col-xl-4">
+                <div class="col-sm-6 col-xl-4 mb-4">
                     <a href="" class="flex items-center gap-1">
                         <img src="./img/logo.png" alt="img">
                         <span class="fw-bold fs-2 ">Ascent</span>
@@ -640,12 +639,32 @@
                     <p class="mt-3">Yes, there are many notable ma corporate the a od businesses Informati worldwide
 
                     </p>
+                    <ul class="d-flex align-items-center gap-3 mt-4 list-unstyled">
+                        <li><a href="" style="width: 40px;height: 40px;"
+                                class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-green "><i
+                                    class="fa-brands fa-facebook-f "></i></a></li>
+                        <li><a href="" style="width: 40px;height: 40px;"
+                                class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-green "><i
+                                    class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="" style="width: 40px;height: 40px;"
+                                class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-green "><i
+                                    class="fa-brands fa-linkedin"></i></a></li>
+                        <li><a href="" style="width: 40px;height: 40px;"
+                                class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-green "><i
+                                    class="fa-brands fa-pinterest-p"></i></a></li>
+                    </ul>
                 </div>
-                <div class="d-none d-xl-block col-xl-1"></div>
-
-                <div class="col-sm-6 col-xl-3">
-                    <h3 class="fw-semibold">Pages</h3>
-                    <ul class="d-flex flex-column gap-3 pt-3 list-unstyled list-pages">
+                <div class="col-sm-6 col-xl-2 mb-4">
+                    <div class="d-inline-block">
+                        <h3 class="fw-semibold">Pages</h3>
+                        <span style="width: 130%; height: 1px;" class="d-block mt-2 bg-background position-relative ">
+                            <span
+                                class="position-absolute  end-0 top-50  absolute-y-center  bg-background   rounded-circle"
+                                style="height: 6px; width: 6px;"></span>
+                        </span>
+                    </div>
+                    4
+                    <ul class="d-flex flex-column gap-3 pt-3 list-unstyled list-pages anim-left">
                         <li><a href="" class="">About Us</a></li>
                         <li><a href="" class="">Latest Service</a></li>
                         <li><a href="" class="">Latest Blog And News</a></li>
@@ -653,40 +672,61 @@
                         <li><a href="" class="">Our Creative Team Member</a></li>
                     </ul>
                 </div>
-                <div class="d-none d-xl-block col-xl-1"></div>
-                <div class="col-sm-6 col-xl-3">
-                    <h3 class="fw-semibold">Contact</h3>
-                    <ul class="d-flex flex-column gap-3 pt-3 list-unstyled">
+                <div class="col-sm-6 col-xl-2 mb-4">
+                    <div class="d-inline-block">
+                        <h3 class="fw-semibold">Contact</h3>
+                        <span style="width: 130%; height: 1px;" class="d-block mt-2 bg-background position-relative ">
+                            <span
+                                class="position-absolute  end-0 top-50  absolute-y-center  bg-background   rounded-circle"
+                                style="height: 6px; width: 6px;"></span>
+                        </span>
+                    </div>
+                    <ul class="d-flex flex-column gap-3 pt-3 list-unstyled anim-left">
                         <li>
                             <p class="d-flex  align-items-center gap-4">
-                                <span style="width: 44px; height: 44px;"
-                                    class="rounded-circle border  d-flex justify-content-center align-items-center text-green-foreground"><i
-                                        class="fa-solid fa-location-dot"></i></span> <span class="">1179
+                                <span class="ms-3">1179
                                     KFC Road, Lisbon, Portugal</span>
                             </p>
                         </li>
                         <li>
                             <p class="d-flex  align-items-center gap-4">
-                                <span style="width: 44px; height: 44px;"
-                                    class="rounded-circle border  d-flex justify-content-center align-items-center text-green-foreground"><i
-                                        class="fa-solid fa-envelope"></i></span> <a
-                                    href="mailto:Sakib23@gmail.com">Sakib23@gmail.com</a>
+                                <a class="ms-3" href="mailto:Sakib23@gmail.com">Sakib23@gmail.com</a>
                             </p>
                         </li>
                         <li>
                             <p class="d-flex  align-items-center gap-4">
-                                <span style="width: 44px; height: 44px;"
-                                    class="rounded-circle border  d-flex justify-content-center align-items-center  text-green-foreground"><i
-                                        class="fa-solid fa-phone"></i></span> <a
-                                    href="tel:012547892354">012547892354</a>
+                                <a class="ms-3" href="tel:012547892354">012547892354</a>
                             </p>
                         </li>
                     </ul>
                 </div>
+                <div class="col-md-6 col-xl-4 mb-4">
+
+                    <div class="d-inline-block">
+                        <h3 class="fw-semibold " style="white-space: nowrap;">Our Newsletter
+                        </h3>
+                        <span style="width: 130%; height: 1px;" class="d-block mt-2 bg-background position-relative ">
+                            <span
+                                class="position-absolute  end-0 top-50  absolute-y-center  bg-background   rounded-circle"
+                                style="height: 6px; width: 6px;"></span>
+                        </span>
+                    </div>
+                    <p class="pt-3">
+                        Subscribe our newsletter to get our latest update
+                    </p>
+                    <div class="position-relative  mt-5">
+                        <input type="text" placeholder="Enter Your Email"
+                            class="rounded-3 border-0 text-white  ps-3 py-3  w-100 " style="background: #FFFFFF1A;">
+                        <button style="right: 10px;"
+                            class="btn px-4 py-2 rounded-3 bg-primary text-white btn-animate btn-animate-green  position-absolute  top-50 absolute-y-center d-flex gap-3 align-items-center">
+                            <i class="fa-solid fa-arrow-right"></i></button>
+                    </div>
+
+                </div>
             </div>
             <hr>
 
-            <div class="row mt-5 pb-4">
+            <div class="row mt-5 pb-4 opacity-75">
                 <div class="col-xl-6">
                     <p>© Yoursitename 2024 | All Rights Reserved</p>
                 </div>
@@ -700,7 +740,7 @@
                 </div>
             </div>
         </div>
-        <div class="position-absolute  top-50 absolute-y-center start-50 ">
+        <div class="position-absolute  top-50 absolute-y-center  " style="left: 45%;">
             <img src="./img/shapes/scissors.svg" alt="img">
         </div>
         <div class="position-absolute  top-50 absolute-y-center animate-up-down" style="right: 68px;">
