--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
                                         <a class="nav-link" href="./portfolio.html">Portfolio</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./Learn.html">Contact</a>
+                                        <a class="nav-link" href="./contact.html">Contact</a>
                                     </li>
                                 </ul>
                             </li>
@@ -392,13 +392,74 @@
     </section>
     <main class="contact py-5">
         <div class="container">
-            <div class="title" style="max-width: 630px;">
-                <p class="mb-0 text-secondary">Contact</p>
-                <h2>Unlock your potential with education</h2>
+            <div class="flex-center">
+                <div class="title text-center" style="max-width: 630px;">
+                    <p class="mb-0 text-secondary">Contact</p>
+                    <h2>Unlock your potential with education</h2>
+                </div>
             </div>
-            <div class="row mt-4">
-                <div class="col-xl-6 mb-4">1</div>
-                <div class="col-xl-6 mb-4">2</div>
+
+            <div class="row mt-4 align-items-center">
+                <div class="col-xl-6 mb-4">
+                    <div class="position-relative">
+                        <img src="./img/contact/contact-1.png" alt="img" class="ms-auto d-block">
+                        <div
+                            class="position-absolute top-50 absolute-y-center h-100 d-flex flex-column justify-content-between">
+                            <div class="mt-5  animate-up-down">
+                                <img src="./img/contact/contact-2.png" alt="two-girls-img">
+                            </div>
+                            <div
+                                class="bg-primary px-3 py-3 rounded-3 d-flex align-items-center gap-5 mb-4 animate-left-right">
+                                <div>
+                                    <img src="./img/contact/winner.svg" alt="img">
+                                </div>
+                                <div>
+                                    <h4 class="fs-3 fw-bold text-cream-foreground  font-nunito">
+                                        2k+</h4>
+                                    <h6 class="fs-5 fw-bold text-cream-foreground mt-2 ">Project
+                                        Completed</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 mb-4">
+                    <div class="p-4 rounded-2 shadow-sm">
+                        <h3 class="fs-3 fw-bold font-nunito">Send a message
+                        </h3>
+                        <form action="#">
+                            <div class="row mt-4">
+                                <div class="col-xl-6 mb-4">
+                                    <input type="text" placeholder="Your Name" class="form-control py-3" name="name" />
+                                </div>
+                                <div class="col-xl-6 mb-4">
+                                    <input type="email" placeholder="Your Email" class="form-control py-3"
+                                        name="email" />
+                                </div>
+                            </div>
+                            <div class="row ">
+                                <div class="col-xl-12 mb-4">
+                                    <input type="text" placeholder="Your Address" class="form-control py-3"
+                                        name="name" />
+                                </div>
+                            </div>
+                            <div class="row ">
+                                <div class="col-xl-12 mb-4">
+                                    <textarea rows="5" placeholder="Write your Message here" class="form-control py-3"
+                                        name="name"></textarea>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xl-12 mb-4">
+                                    <button
+                                        class="btn w-100 px-4 py-3 overflow-hidden rounded-pill bg-primary text-white btn-animate btn-animate-green   "><span>Send
+                                            now</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
