--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                         <a class="nav-link" href="./portfolio.html">Portfolio</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./Learn.html">Contact</a>
+                                        <a class="nav-link" href="./contact.html">Contact</a>
                                     </li>
                                 </ul>
                             </li>
@@ -1406,7 +1406,7 @@
         <div class="position-absolute  bottom-0 d-none d-xl-block " style="left: 60px; z-index: -1;">
             <img src="./img/shapes/knowledge-lshpe.png" alt="tree">
         </div>
-        <div class="position-absolute  animate-left-right decor-1" style="top: 120px; right: 67px;">
+        <div class="position-absolute  animate-left-right decor-1" style="top: 120px; right: 67px; z-index: -1;">
             <img src="./img/shapes/knowledge-animal.png" alt="animal">
         </div>
     </section>
