--- a/portfolio.html
+++ b/portfolio.html
@@ -101,7 +101,7 @@
                                         <a class="nav-link" href="./portfolio.html">Portfolio</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./Learn.html">Contact</a>
+                                        <a class="nav-link" href="./contact.html">Contact</a>
                                     </li>
                                 </ul>
                             </li>
