--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="header-top bg-destructive d-none d-md-block">
+    <header class="header" id="header">
+        <div class="header-top bg-destructive d-none d-md-block" id="top-header">
             <div class="container">
                 <ul class="py-2 list-unstyled d-flex gap-3 text-white m-0">
                     <li>
@@ -78,7 +78,7 @@
                                         <a class="nav-link" href="./blog.html">Blog</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./blog.html">Blog Details</a>
+                                        <a class="nav-link" href="./blog-details.html">Blog Details</a>
                                     </li>
                                 </ul>
                             </li>
