--- a/service-details.html
+++ b/service-details.html
@@ -78,7 +78,7 @@
                                         <a class="nav-link" href="./blog.html">Blog</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./blog.html">Blog Details</a>
+                                        <a class="nav-link" href="./blog-details.html">Blog Details</a>
                                     </li>
                                 </ul>
                             </li>
@@ -312,7 +312,7 @@
     <section class="banner py-5 bg-warm position-relative z-0 breadcrumb">
         <div class="container">
             <div class="row align-items-center ">
-                <div class="col-xl-4">
+                <div class="col-xl-5">
                     <h1 class="display-2 fw-bold">Service Details</h1>
                     <ul class="list-unstyled d-flex gap-4">
                         <li><a href="" class="fs-3 fw-bold text-muted-foreground">Home</a></li>
@@ -320,7 +320,7 @@
                     </ul>
                 </div>
 
-                <div class="col-xl-4"></div>
+                <div class="col-xl-3"></div>
                 <div class="col-xl-4">
                     <div class="position-relative">
                         <img src="./img/shapes/bread-cat.png" alt="cat-img" class="position-absolute   animate-up-down"
