--- a/services.html
+++ b/services.html
@@ -78,7 +78,7 @@
                                         <a class="nav-link" href="./blog.html">Blog</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./blog.html">Blog Details</a>
+                                        <a class="nav-link" href="./blog-details.html">Blog Details</a>
                                     </li>
                                 </ul>
                             </li>
