--- a/service-details.html
+++ b/service-details.html
@@ -29,8 +29,8 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="header-top bg-destructive d-none d-md-block">
+    <header class="header" id="header">
+        <div class="header-top bg-destructive d-none d-md-block" id="top-header">
             <div class="container">
                 <ul class="py-2 list-unstyled d-flex gap-3 text-white m-0">
                     <li>
@@ -312,16 +312,19 @@
     <section class="banner py-5 bg-warm position-relative z-0 breadcrumb">
         <div class="container">
             <div class="row align-items-center ">
-                <div class="col-xl-5">
-                    <h1 class="display-2 fw-bold">Service Details</h1>
-                    <ul class="list-unstyled d-flex gap-4">
-                        <li><a href="" class="fs-3 fw-bold text-muted-foreground">Home</a></li>
-                        <li><a href="" class="fs-3  fw-bold text-muted-foreground">Service Details</a></li>
-                    </ul>
+                <div class="col-md-5">
+                    <div class="d-flex flex-column flex-xm-row align-items-center">
+                        <h1 class="display-2 fw-bold">Service Details</h1>
+                        <ul class="list-unstyled d-flex gap-4">
+                            <li><a href="" class="fs-3 fw-bold text-muted-foreground">Home</a></li>
+                            <li><a href="" class="fs-3  fw-bold text-muted-foreground">Service Details</a></li>
+                        </ul>
+                    </div>
+
                 </div>
 
-                <div class="col-xl-3"></div>
-                <div class="col-xl-4">
+                <div class="col-md-3"></div>
+                <div class="col-md-4">
                     <div class="position-relative">
                         <img src="./img/shapes/bread-cat.png" alt="cat-img" class="position-absolute   animate-up-down"
                             style="left: -30px; bottom: 1.25rem;">
@@ -364,18 +367,18 @@
                     </div>
                 </div>
                 <div class="row pt-4">
-                    <div class="col-xl-4 mb-4">
+                    <div class="col-sm-6 col-xl-4 mb-4">
                         <div>
                             <img src="./img/services/service-details-2.png" alt="img-1" class="w-full">
                         </div>
                     </div>
-                    <div class="col-xl-4 mb-4">
+                    <div class="col-sm-6 col-xl-4 mb-4">
                         <div>
                             <img src="./img/services/service-details-3.png" alt="img-1" class="w-full">
                         </div>
 
                     </div>
-                    <div class="col-xl-4 mb-4">
+                    <div class="col-sm-6 col-xl-4 mb-4">
                         <div>
                             <img src="./img/services/service-details-4.png" alt="img-1" class="w-full">
                         </div>
