--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="header-top bg-destructive d-none d-md-block">
+    <header class="header" id="header">
+        <div class="header-top bg-destructive d-none d-md-block" id="top-header">
             <div class="container">
                 <ul class="py-2 list-unstyled d-flex gap-3 text-white m-0">
                     <li>
@@ -312,15 +312,17 @@
     <section class="banner py-5 bg-warm position-relative z-0 breadcrumb">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-xl-4">
-                    <h1 class="display-2 fw-bold">About Us</h1>
-                    <ul class="list-unstyled d-flex gap-4">
-                        <li><a href="" class="fs-3 fw-bold text-muted-foreground">Home</a></li>
-                        <li><a href="" class="fs-3  fw-bold text-muted-foreground">About Us</a></li>
-                    </ul>
+                <div class="col-md-5">
+                    <div class="d-flex flex-column flex-xm-row align-items-center">
+                        <h1 class="display-2 fw-bold ">About Us</h1>
+                        <ul class="list-unstyled d-flex gap-4">
+                            <li><a href="" class="fs-3 fw-bold text-muted-foreground">Home</a></li>
+                            <li><a href="" class="fs-3  fw-bold text-muted-foreground">About Us</a></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col-xl-4"></div>
-                <div class="col-xl-4">
+                <div class="col-md-3"></div>
+                <div class="col-md-4">
                     <div class="position-relative">
                         <img src="./img/shapes/bread-cat.png" alt="cat-img" class="position-absolute   animate-up-down"
                             style="left: -30px; bottom: 1.25rem;">
@@ -357,7 +359,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="d-flex gap-3 d-sm-block">
+                        <div class="d-flex gap-3 d-sm-block mt-5 mt-sm-0">
                             <div class="card border-0 bg-warm rounded-4">
                                 <div class="card-body text-center">
                                     <img src="./img/about/icreement.png" alt="icreement">
@@ -376,7 +378,7 @@
                     </div>
 
                 </div>
-                <div class="col-xl-5 mt-4 mt-xl-0">
+                <div class="col-xl-5 mt-3  pt-sm-4 mt-sm-5 mt-xl-0">
                     <div class="title" style="max-width: 439px;">
                         <p class="mb-0 text-secondary">About Us</p>
                         <h2>Unlocking Potential, One Child at a just Time in school</h2>
@@ -397,13 +399,15 @@
     <section class="ourPricing py-5">
         <div class="container">
             <div class="flex-center">
-                <div class="title" style="max-width: 439px;">
-                    <p class="mb-0 text-secondary">About Us</p>
-                    <h2>Unlocking Potential, One Child at a just Time in school</h2>
+                <div class="title text-center" style="max-width: 439px;">
+                    <p class="mb-0 text-primary">Our Pricing
+
+                    </p>
+                    <h2>Transforming lives through knowledge by education</h2>
                 </div>
             </div>
             <div class="row mt-4 gx-0">
-                <div class="col-md-6 col-xl-4">
+                <div class="col-md-6 col-xl-4 mt-4 mt-lg-0">
                     <div class="card border-0 shadow">
                         <div class="card-header border-0 bg-warm fs-3 text-center py-3 fw-bold">Stater Plan</div>
                         <div class="card-body border-0">
@@ -442,7 +446,7 @@
                     </div>
 
                 </div>
-                <div class="col-md-6 col-xl-4">
+                <div class="col-md-6 col-xl-4 mt-4 mt-lg-0">
                     <div class="card border-0 shadow">
                         <div class="card-header border-0 bg-primary text-white fs-3 text-center py-3 fw-bold ">Golden
                             Plan</div>
@@ -481,7 +485,7 @@
                     </div>
 
                 </div>
-                <div class="col-md-6 col-xl-4">
+                <div class="col-md-6 col-xl-4 mt-4 mt-lg-0">
                     <div class="card border-0 shadow">
                         <div class="card-header border-0 bg-warm fs-3 text-center py-3 fw-bold">Platinum Plan</div>
                         <div class="card-body border-0">
@@ -545,7 +549,7 @@
                     </div>
                     <div class="col-xl-6">
                         <div class="swiper" id="testimonialSwiper">
-                            <div class="swiper-wrapper p-sm-5">
+                            <div class="swiper-wrapper py-5">
                                 <div class="card border-0 rounded-3 p-4 shadow   swiper-slide">
                                     <div class="card-body  ">
                                         <div class="d-flex justify-content-between align-items-center position-relative pb-5"
