--- a/blog.html
+++ b/blog.html
@@ -32,8 +32,8 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="header-top bg-destructive d-none d-md-block">
+    <header class="header" id="header">
+        <div class="header-top bg-destructive d-none d-md-block" id="top-header">
             <div class="container">
                 <ul class="py-2 list-unstyled d-flex gap-3 text-white m-0">
                     <li>
@@ -315,16 +315,19 @@
     <section class="banner py-5 bg-warm position-relative z-0 breadcrumb mb-5">
         <div class="container">
             <div class="row align-items-center ">
-                <div class="col-xl-4">
-                    <h1 class="display-2 fw-bold">Blog</h1>
-                    <ul class="list-unstyled d-flex gap-4">
-                        <li><a href="" class="fs-3 fw-bold text-muted-foreground">Home</a></li>
-                        <li><a href="" class="fs-3  fw-bold text-muted-foreground">Blog</a></li>
-                    </ul>
+                <div class="col-md-5">
+                    <div class="d-flex flex-column flex-xm-row align-items-center">
+                        <h1 class="display-2 fw-bold">Blog</h1>
+                        <ul class="list-unstyled d-flex gap-4">
+                            <li><a href="" class="fs-3 fw-bold text-muted-foreground">Home</a></li>
+                            <li><a href="" class="fs-3  fw-bold text-muted-foreground">Blog</a></li>
+                        </ul>
+                    </div>
+
                 </div>
 
-                <div class="col-xl-4"></div>
-                <div class="col-xl-4">
+                <div class="col-md-3"></div>
+                <div class="col-md-4">
                     <div class="position-relative">
                         <img src="./img/shapes/bread-cat.png" alt="cat-img" class="position-absolute   animate-up-down"
                             style="left: -30px; bottom: 1.25rem;">
@@ -343,7 +346,7 @@
                     <div>
                         <div class="card border-0 mb-5 shadow-sm">
                             <img src="./img/blog/blog-details-1.png" alt="blog-img-1" class="w-100 card-img-top">
-                            <div class="card-body p-5">
+                            <div class="card-body p-lg-5">
                                 <a href="./blog-details.html">
                                     <h4 class="card-title fw-bold fs-3 fw-bold">Unlock your potential with
                                         education
@@ -358,7 +361,7 @@
                                     class="btn px-4 py-2_5 btn-outline-secondary text-dark btn-animate btn-animate-green mt-4">Read
                                     More</a>
 
-                                <div class=" pb-3 d-flex justify-items-center gap-5 mt-3">
+                                <div class=" pb-3 d-flex justify-items-center gap-3 gap-sm-5 mt-3 flex-wrap">
                                     <p>January 19, 2024 </p>
                                     <p>By admin
                                     </p>
@@ -368,7 +371,7 @@
                         </div>
                         <div class="card border-0 mb-5 shadow-sm">
                             <img src="./img/blog/blog-3-2.png" alt="blog-img-1" class="w-100 card-img-top">
-                            <div class="card-body p-5">
+                            <div class="card-body p-lg-5">
                                 <a href="./blog-details.html">
                                     <h4 class="card-title fw-bold fs-3 fw-bold">Invest In Education, Invest
                                         In
@@ -381,7 +384,7 @@
                                     class="btn px-4 py-2_5 btn-outline-secondary text-dark btn-animate btn-animate-green mt-4">Read
                                     More</a>
 
-                                <div class=" pb-3 d-flex justify-items-center gap-5 mt-3">
+                                <div class=" pb-3 d-flex justify-items-center gap-3 gap-sm-5 mt-3 flex-wrap">
                                     <p>January 19, 2024 </p>
                                     <p>By admin
                                     </p>
@@ -391,7 +394,7 @@
                         </div>
                         <div class="card border-0 mb-5 shadow-sm">
                             <img src="./img/blog/blog-3-3.png" alt="blog-img-1" class="w-100 card-img-top">
-                            <div class="card-body p-5">
+                            <div class="card-body p-lg-5">
                                 <a href="./blog-details.html">
                                     <h4 class="card-title fw-bold fs-3 fw-bold">It Plays A Vital Role In
                                         Shaping The
@@ -403,7 +406,7 @@
                                     class="btn px-4 py-2_5 btn-outline-secondary text-dark btn-animate btn-animate-green mt-4">Read
                                     More</a>
 
-                                <div class=" pb-3 d-flex justify-items-center gap-5 mt-3">
+                                <div class=" pb-3 d-flex justify-items-center gap-3 gap-sm-5 mt-3 flex-wrap">
                                     <p>January 19, 2024 </p>
                                     <p>By admin
                                     </p>
@@ -413,7 +416,7 @@
                         </div>
                         <div class="card border-0 mb-5 shadow-sm">
                             <img src="./img/blog/blog-3-4.png" alt="blog-img-1" class="w-100 card-img-top">
-                            <div class="card-body p-5">
+                            <div class="card-body p-lg-5">
                                 <a href="./blog-details.html">
                                     <h4 class="card-title fw-bold fs-3 fw-bold">Invest In Education, Invest
                                         In
@@ -426,7 +429,7 @@
                                     class="btn px-4 py-2_5 btn-outline-secondary text-dark btn-animate btn-animate-green mt-4">Read
                                     More</a>
 
-                                <div class=" pb-3 d-flex justify-items-center gap-5 mt-3">
+                                <div class=" pb-3 d-flex justify-items-center gap-3 gap-sm-5 mt-3 flex-wrap">
                                     <p>January 19, 2024 </p>
                                     <p>By admin
                                     </p>
@@ -461,7 +464,7 @@
 
                 </div>
                 <div class="col-xl-4 mb-4">
-                    <div class="card p-5 border-0 shadow-sm  mb-5 ">
+                    <div class="card p-3 p-lg-5 border-0 shadow-sm  mb-5 ">
                         <img src="./img/blog/user.png" alt="user img" width="120">
                         <div class="card-body p-0 mt-3">
                             <h4 class="card-title font-nunito fw-bold">Nafiz Bhuiyan</h4>
@@ -491,7 +494,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="card p-5 border-0 shadow-sm  mb-5 ">
+                    <div class="card p-3 p-lg-5 border-0 shadow-sm  mb-5 ">
                         <div class="card-body p-0">
                             <h4 class="card-title font-nunito fw-bold fs-3">Search<span class="text-secondary">_</span>
                             </h4>
@@ -499,7 +502,7 @@
                                 class="rounded-3 mt-4 border border-secondary-subtle  ps-3 py-3  w-100 ">
                         </div>
                     </div>
-                    <div class="card p-5 border-0 shadow-sm  mb-5 ">
+                    <div class="card p-3 p-lg-5 border-0 shadow-sm  mb-5 ">
                         <div class="card-body p-0">
                             <h4 class="card-title font-nunito fw-bold fs-3">Category<span
                                     class="text-secondary">_</span> </h4>
@@ -523,7 +526,7 @@
 
                         </div>
                     </div>
-                    <div class="card p-5 border-0 shadow-sm  mb-5 ">
+                    <div class="card p-3 p-lg-5 border-0 shadow-sm  mb-5 ">
                         <div class="card-body p-0">
                             <h4 class="card-title font-nunito fw-bold fs-3">Recent post<span
                                     class="text-secondary">_</span>
@@ -557,7 +560,7 @@
 
                         </div>
                     </div>
-                    <div class="card p-5 border-0 shadow-sm  mb-5 ">
+                    <div class="card p-3 p-lg-5 border-0 shadow-sm  mb-5 ">
                         <div class="card-body p-0">
                             <h4 class="card-title font-nunito fw-bold fs-3">Tags<span class="text-secondary">_</span>
                             </h4>
