--- a/index.html
+++ b/index.html
@@ -1431,7 +1431,7 @@
                     </div>
                     <div class="col-xl-6">
                         <div class="swiper" id="testimonialSwiper">
-                            <div class="swiper-wrapper p-sm-5">
+                            <div class="swiper-wrapper py-5">
                                 <div class="card border-0 rounded-3 p-4 shadow   swiper-slide">
                                     <div class="card-body  ">
                                         <div class="d-flex justify-content-between align-items-center position-relative pb-5"
